fix(ons-fab): Covers the toolbar.

--- a/core/css/common.css
+++ b/core/css/common.css
@@ -47,7 +47,7 @@ ons-page, ons-navigator, ons-tabbar, ons-sliding-menu, ons-split-view, ons-dialo
 }
 
 ons-fab, ons-speed-dial {
-  z-index: 3;
+  z-index: 10001;
 }
 
 * {
